--- a/style_index.css
+++ b/style_index.css
@@ -398,7 +398,7 @@
 
 .add-to-cart-btn {
   border: none;
-  background-color: #ff6f61;
+  background-color: red;
   padding: 10px;
   color: white;
   font-size: 16px;
@@ -480,7 +480,7 @@
 .social-icons a {
     font-size: 30px;
     padding: 10px;
-    color: #333;
+    color: gray;
     text-decoration: none;
 }
 
@@ -571,3 +571,18 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.cart.highlight{
+  color: red;
+}
+
+.fa-facebook:hover{
+  color: #0866fe;
+}
+
+.fa-youtube:hover{
+  color: red;
+}
+
+.fa-tiktok:hover{
+  color: black;
+}
