--- a/CSS/style_login.css
+++ b/CSS/style_login.css
@@ -15,7 +15,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    overflow: hidden;
   }
 /* Đầu Trang */
 
@@ -24,7 +23,7 @@
     top: 0;
     left: 0;
     width: 100%;
-
+    margin-bottom: 20px;
 }
 
   .top-header {
@@ -156,7 +155,6 @@ a {
     color: #333;
     font-size: 14px;
     text-decoration: none;
-    margin: 15px 0;
 }
 
 button {
