--- a/CSS/style_GioHang.css
+++ b/CSS/style_GioHang.css
@@ -87,6 +87,19 @@ body {
     font-size: 24px;
 }
 
+.input-group {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+#originalTotal {
+    font-size: 1.1rem;
+    color: #888;
+}
+
+
+
 .back-home-btn {
     text-decoration: none;
     display: inline-block;
@@ -105,6 +118,7 @@ body {
     transform: scale(1.05);
     color: #2186d8;
 }
+
 
 /* Phần footer */
 
