--- a/CSS/style_SanPham.css
+++ b/CSS/style_SanPham.css
@@ -3,14 +3,14 @@
   grid-template-columns: repeat(5, 1fr); 
   gap: 10px; 
   padding: 10px; 
-  width: 80%; 
+  width: 100%; 
   margin: 10px 0 20px 0;
 }
 .container img {
   border-radius: 10px;
   margin: 10px;
 }
-.container{
+.container-fluid{
   width: 80%;
 }
 
