--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -30,6 +30,7 @@
   .logo {
     height: 40px;
     margin-right: 15px;
+    border-radius: 10px;
   }
 
   .left {
@@ -224,33 +225,42 @@
     margin-right: 2%;
   }
   .Banner a:hover{
-    color: white;
-    background-color: #007bff;
-    padding: 5px;
-    border-radius: 10px;
-    transform: scale(1.02);
+    color: yellow;
+    transform: scale(1.2);
   }
 
   /* Ô sản phẩm */
 
   .product-container-sales {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc(100% / 5); 
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
     gap: 16px;
     padding: 20px;
-    justify-content: center;
-    flex-wrap: nowrap;
-    overflow-x: auto;
+    scroll-behavior: smooth;
+    height: auto;
   }
+
+  .product-container-sales::-webkit-scrollbar {
+    height: 6px;
+  }
+  .product-container-sales::-webkit-scrollbar-thumb {
+    background-color: #a7d1e2;
+    border-radius: 4px;
+  }
+
   .product-card {
+    scroll-snap-align: start;
     background: white;
     border: 1px solid #ddd;
     border-radius: 10px;
-    min-width: 250px;
-    padding: 10px;
+    padding: 3%;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     cursor: pointer;
     transition: transform 0.2s;
+    height: auto;
   }
   .product-card:hover {
     transform: scale(1.02);
